--- a/themes/Default/css/main.css
+++ b/themes/Default/css/main.css
@@ -463,7 +463,7 @@ td.mceIframeContainer {
 
 
 /* FORMS */
-input:not([type="checkbox"]):not([type="radio"]), button, textarea {
+input:not([type="checkbox"]):not([type="radio"]):not([type="range"]), button, textarea {
     -webkit-appearance: none;
     -webkit-border-radius: 0;
     border-radius: 0;
